# 2016-2017-TunnelGeneral

./: .gitignore  99-tunnel-names.rules  info.txt  main_launcher.sh  make_udev_rules  very important.txt.txt
Competition Game/: competition_game.py
Competition Game/src/: AI_17.py  AI_JED.py  Display.py  GridChoose.py  Grid_Util.py  MouseEvents.py  Robot.py  Sensors.py  Stage.py  Stage_AlgorithmChoose.py  Stage_Build.py  Stage_Competition.py  Stage_GridChoose.py  Static_Decorator.py  ThresholdFinder.py  Timer.py  genmap.txt  gridstates.txt  hampath.py
Competition Game/src/robots/: robot0.txt  robot1.txt  robot2.txt  robot3.txt
Competition Game/src/soundfx/: disclaimer.txt  untitled.py
Motor Control Simulator/: CMakeLists.txt  PID.h  PIDnoTime.h  main.cpp
Tunnel Robot/: calibration_test.py  emf_test.py  led_test.py  main.py  mainOLD.py  main_buttons.py  main_import_test.py  main_motors.py  main_motors_pi.py  main_taptest.py  prediction_test.py  recording_test.py  tap_test.py  test_main.py
Tunnel Robot/.build/: environment.pickle
Tunnel Robot/arduino/8x8display/.build/: environment.pickle
Tunnel Robot/arduino/8x8display/.build/uno/: Makefile  Makefile.deps
Tunnel Robot/arduino/8x8display/.build/uno/Adafruit-GFX-Library/: Adafruit_GFX.d  dependencies.d  glcdfont.d
Tunnel Robot/arduino/8x8display/.build/uno/Adafruit_NeoMatrix/: Adafruit_NeoMatrix.d  dependencies.d
Tunnel Robot/arduino/8x8display/.build/uno/Adafruit_NeoMatrix/extras/: gamma.d
Tunnel Robot/arduino/8x8display/.build/uno/Adafruit_NeoPixel/: Adafruit_NeoPixel.d  dependencies.d  esp8266.d
Tunnel Robot/arduino/8x8display/.build/uno/arduino/: dependencies.d
Tunnel Robot/arduino/8x8display/.build/uno/src/: sketch.cpp  sketch.d
Tunnel Robot/arduino/8x8display/src/: sketch.ino
Tunnel Robot/arduino/all_func_wheels/: CMakeLists.txt  arduino_framework_emulator.cbp  arduino_framework_emulator.cpp
Tunnel Robot/arduino/all_func_wheels/arduino_framework_emulator_headers/: Adafruit_GFX.h  Adafruit_NeoMatrix.h  Adafruit_NeoPixel.h  Arduino.h  predeclarations.h
Tunnel Robot/arduino/all_func_wheels/src/: pidbullshit  sketch.ino  sketch.ino.save  sketch.ino.save.1  sketch.ino.save.2
Tunnel Robot/arduino/all_func_wheels/src/sketch/: Buttons.h  Calibrator.h  ClassThatKeepsCoordinatesFromDistances.h  Display.h  IRPins.h  MiscDefinitions.h  MotorController.h  MotorInterface.h  MotorInterfaceBase.h  MovementInterface.h  MovementInterfaceBase.h  MovementInterfaceMasterSlave.h  ObstacleFinder.h  OurRobotSpecs.h  WireFinder.h  sketch.ino  sketch.ino.cpp
Tunnel Robot/arduino/emf_request/.build/: environment.pickle
Tunnel Robot/arduino/emf_request/.build/uno/: Makefile  Makefile.deps  firmware.elf  firmware.hex
Tunnel Robot/arduino/emf_request/.build/uno/arduino/: dependencies.d
Tunnel Robot/arduino/emf_request/.build/uno/src/: sketch.cpp
Tunnel Robot/arduino/motor_control/src/: sketch.ino
Tunnel Robot/arduino/motor_treads/src/: sketch.ino
Tunnel Robot/arduino/motor_wheels/src/: sketch.ino
Tunnel Robot/arduino/serial_test/src/: sketch.ino
Tunnel Robot/nxt/: Robotics2017.bak  Robotics2017.nxc  Robotics20174x4.nxc
Tunnel Robot/src/: AcousticAnalysis.py  ArduinoFuncs.py  DeviceComm.py  Displays.py  Interface.py  Motors.py  MotorsOLD.py  NXTComm.py  Navigation.py  Robot.py  Robot_Impl.py  SensorArduino.py  SerialComm.py  SerialCommNoThreading.py
Tunnel Robot/src/calibration/: svc_calib_scaler
Tunnel Robot/test_arduino/all_func_wheels/lib/pid/: PID.h
Tunnel Robot/test_arduino/all_func_wheels78v/lib/Adafruit-GFX-Library/: Adafruit_GFX.cpp
Tunnel Robot/test_arduino/all_func_wheels78v/src/: sketch.ino
Tunnel Robot/test_arduino/button_test/: CMakeLists.txt
Tunnel Robot/test_arduino/button_test/sketch/: sketch.ino
Tunnel Robot/test_arduino/emf_request/src/: sketch.ino
Tunnel Robot/test_arduino/emf_request/src/sketch/: sketch.ino
Tunnel Robot/test_arduino/emf_test/: CMakeLists.txt
Tunnel Robot/test_arduino/emf_test/sketch/: sketch.ino
Tunnel Robot/test_arduino/encoder_test/: CMakeLists.txt
Tunnel Robot/test_arduino/encoder_test/sketch/: sketch.ino
Tunnel Robot/test_arduino/ir_test/sketch/: sketch.ino
Tunnel Robot/test_arduino/motor_control/src/: sketch.ino
Tunnel Robot/test_arduino/motor_driver_sim/src/: sketch.ino
Tunnel Robot/test_arduino/motor_new/: CMakeLists.txt
Tunnel Robot/test_arduino/motor_new/src/sketch/: MotorControllerCopyDontEdit.h  sketch.ino
Tunnel Robot/test_arduino/serial_test/src/: sketch.ino
Tunnel Robot/test_arduino/template_code/src/: sketch.ino
Tunnel Robot/test_arduino/tests/src/: sketch.ino
Vision Stuff/: circle_detection.py  dice_detection.py  lid_orientation_detect.py
